--- a/Day_1/index.html
+++ b/Day_1/index.html
@@ -38,8 +38,9 @@
         <select>
             <option value="programming">Programming</option>
             <option value="Hiking">Hiking</option>
-        </select>
+        </select><br><br>   
      </div>
+     <input type="file"><br><br>
 
      <input type="submit" value="submit">
 </body>
