--- a/Day_1/index.html
+++ b/Day_1/index.html
@@ -12,12 +12,17 @@
     <a href="https://hianime.to/" target="new">anime</a>
     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Fugiat, tenetur ratione vitae repellendus provident aperiam saepe cupiditate laudantium sed laboriosam eius officia voluptate repellat error perferendis tempore ducimus, iusto dignissimos omnis blanditiis? Nam architecto consequatur provident libero! Impedit ad explicabo aut officia, est minima possimus temporibus! Culpa facere unde ducimus cupiditate eos voluptates quod cum quae recusandae sunt neque ratione, eum commodi, consequatur ab, iusto dicta. Officiis possimus, praesentium minima ipsa mollitia reiciendis optio consequuntur, ad earum excepturi architecto dolorum repellendus esse itaque cumque obcaecati, vero vitae eligendi alias velit aperiam ab corporis dolorem quaerat? Laboriosam molestiae ipsa illum reprehenderit.</p>
      -->
+     <img src="logo.png" alt="" height="100px">
      <p>Login to Facebook</p>
      <label for="fname">Full Name : </label>
      <input type="text" placeholder="Full Name"><br><br>
 
      <label for="age">Age : </label>
      <input type="number" placeholder="Age"><br><br>
+     <div>
+        <label for="Dob">Date of Birth</label>
+        <input type="date">
+     </div>
      
      <label for="gender">Gender : </label>
      <input type="radio" id="male" name="gender" >
