--- a/Day_1/index.html
+++ b/Day_1/index.html
@@ -21,7 +21,7 @@
      <input type="number" placeholder="Age"><br><br>
      <div>
         <label for="Dob">Date of Birth</label>
-        <input type="date">
+        <input type="month">
      </div>
      
      <label for="gender">Gender : </label>
@@ -47,6 +47,6 @@
      </div>
      <input type="file"><br><br>
 
-     <input type="submit" value="submit">
+     <input type="submit">
 </body>
 </html>
