--- a/Day_1/Assignment1.html
+++ b/Day_1/Assignment1.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Assignment</title>
+    <link rel="stylesheet" href="Assignment1.css">
 </head>
 <body>
     <form action="post">
