--- a/Day_1/Day_3.html
+++ b/Day_1/Day_3.html
@@ -1,20 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="Day_3.css">
 </head>
+
 <body>
     <!-- <div class="container">
         Hello
     </div> -->
     <!-- <p class="line">This is a Line <br>This is Second Line</p> -->
-    <div class="my-flex">
+    <!-- <div class="my-flex">
         <button class="submit"><b>Submit</b></button>
         <button class="cancel"><b>Cancel</b></button>
+    </div> -->
+    <div class="content-container">
+        <p>Welcome to my application</p>
+
+        <div class="login-form">
+            <h3 id="login-title">Login</h3>
+            <div>
+                <label for="email">Email:</label>
+                <input type="email" placeholder="Email">
+            </div>
+            <div>
+                <label for="Password">Password:</label>
+                <input type="password" placeholder="Password">
+            </div>
+            <div class="checkbox">
+                <input type="checkbox">
+                <label >Remember me</label>
+            </div>
+            <div class="button-container">
+                <button>Submit</button> 
+            </div>
+        </div>
     </div>
-    
+
 </body>
+
 </html>
