--- a/Day_1/Assignment_3/Assignment_3.html
+++ b/Day_1/Assignment_3/Assignment_3.html
@@ -29,13 +29,13 @@
             </div>
             <div class="continue-btn">
                 <div >
-                    <button class="google-btn" ><img src="./icon/google.png" alt=""><b> SIGN IN WITH GOOGLE</b></button>
+                    <button class="google-btn" ><img src="../icon/google.png" alt=""><b> SIGN IN WITH GOOGLE</b></button>
                 </div>
                 <div>
-                    <button class="facebook-btn"><img src="./icon/facebook (1).png" alt=""><b>SIGN IN WITH FACEBOOK</b></button>
+                    <button class="facebook-btn"><img src="../icon/facebook (1).png" alt=""><b>SIGN IN WITH FACEBOOK</b></button>
                 </div>
                 <div class="twiter-btn">
-                    <button class="twiter-btn"><img src="./icon/twitter.png" alt=""><b>SIGN IN WITH TWITER</b></button>
+                    <button class="twiter-btn"><img src="../icon/twitter.png" alt=""><b>SIGN IN WITH TWITER</b></button>
                 </div>
             </div>
         </div>
