making some changes
making some changes

--- a/Day_1/Day_3.html
+++ b/Day_1/Day_3.html
@@ -37,6 +37,9 @@
             <div class="button-container">
                 <button>Submit</button> 
             </div>
+            <div>
+                
+            </div>
         </div>
     </div>
 
