adding logo and making some change

--- a/Day_1/Day_3.html
+++ b/Day_1/Day_3.html
@@ -19,6 +19,8 @@
     </div> -->
     <div class="content-container">
         <p>Welcome to my application</p>
+                <!-- <img src="./logo/logo1-removebg-preview.png" alt="logo" id="logo"> -->
+
 
         <div class="login-form">
             <h3 id="login-title">Login</h3>
@@ -35,10 +37,11 @@
                 <label >Remember me</label>
             </div>
             <div class="button-container">
-                <button>Submit</button> 
+                <button><img src="./logo/tick-svgrepo-com.svg" alt="">Submit</button>
             </div>
-            <div>
-                
+            
+            <div class="forgot-pass">
+                <p>Forgot password</p>
             </div>
         </div>
     </div>
