--- a/Day_1/Assignment_3/Assignment_3.html
+++ b/Day_1/Assignment_3/Assignment_3.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="Assignment_3.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="main-content">
@@ -20,9 +23,13 @@
             </div>
             <button class="submit-btn">Log in now</button>
             <hr>
-            <div class="link">
-                <label>Create new account</label>
-                <label>Forget password</label>
+            <div class="links">
+                <div class="new-acc">
+                    <label>Create new account</label>
+                </div>
+                <div class="forgot-pass">
+                    <label>Forget password</label>
+                </div>
             </div>
             <div>
                 <br><br><label>or continue with</label>
