--- a/Day_1/Day_4.html
+++ b/Day_1/Day_4.html
@@ -18,13 +18,13 @@
             <img  src="./logo/logo1-removebg-preview.png" alt="logo">
         </div>
     </div>
-    <div class="mix">
-        <div class="one">
-
+    <!-- <div class="mix"> -->
+        <div >
+            <span class="one"></span>
         </div>
         <div class="two">
 
         </div>
-    </div>
+    <!-- </div> -->
 </body>
 </html>
