--- a/Day_1/Assignment_5/Assignment_5.html
+++ b/Day_1/Assignment_5/Assignment_5.html
@@ -58,12 +58,18 @@
                             <span class="clr">Blue/Copper</span>
                         </div>
                         <div class="grad">
-                            <div class="grad1"></div>
+                            <div class="no-grad">
+                                <div class="grad1"></div>
+                            </div>
                             <div class="grad2-cov">
                                 <div class="grad2"></div>
                             </div>
-                            <div class="grad3"></div>
-                            <div class="grad4"></div>
+                            <div class="no-grad">
+                                <div class="grad3"></div>
+                            </div>
+                            <div  class="no-grad">
+                                <div class="grad4"></div>
+                            </div>
                         </div>
                         <div class="desc">
                             <p>
