--- a/Day_1/Assignment_5/Assignment_5.html
+++ b/Day_1/Assignment_5/Assignment_5.html
@@ -92,7 +92,9 @@
                                 <button><img src="../icon/chat-box.png" alt=""></button>
                             </div>
                         </div>
-                        <div class="nav-bar"></div>
+                        <div class="nav-width">
+                            <div class="nav-bar"></div>
+                        </div>
                     </div>
                     
                 </div>
